--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,12 +31,14 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.eclipselink.jar=C:\\Users\\Teilnehmer2\\Desktop\\Bibliotheken\\eclipselink\\eclipselink.jar
+file.reference.font-awesome-4.6.2.jar=C:\\Users\\Teilnehmer2\\Desktop\\Bibliotheken\\font-awesome-4.6.2.jar
 file.reference.itext-pdfa-5.5.9.jar=C:\\Users\\Teilnehmer2\\Desktop\\Bibliotheken\\itext-5.5.9\\itext-pdfa-5.5.9.jar
 file.reference.itext-xtra-5.5.9.jar=C:\\Users\\Teilnehmer2\\Desktop\\Bibliotheken\\itext-5.5.9\\itext-xtra-5.5.9.jar
 file.reference.itextpdf-5.5.9.jar=C:\\Users\\Teilnehmer2\\Desktop\\Bibliotheken\\itext-5.5.9\\itextpdf-5.5.9.jar
 file.reference.javax.persistence_2.1.0.v201304241213.jar=C:\\Users\\Teilnehmer2\\Desktop\\Bibliotheken\\eclipselink\\javax.persistence_2.1.0.v201304241213.jar
 file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=C:\\Users\\Teilnehmer2\\Desktop\\Bibliotheken\\eclipselink\\org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
 file.reference.org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar=C:\\Users\\Teilnehmer2\\Desktop\\Bibliotheken\\eclipselink\\org.eclipse.persistence.jpa.modelgen_2.5.2.v20140319-9ad6abd.jar
+file.reference.primefaces-5.2.jar=C:\\Users\\Teilnehmer2\\Desktop\\Bibliotheken\\primefaces-5.2.jar
 file.reference.xmlworker-5.5.9.jar=C:\\Users\\Teilnehmer2\\Desktop\\Bibliotheken\\itext-5.5.9\\xmlworker-5.5.9.jar
 includes=**
 j2ee.compile.on.save=true
@@ -61,7 +63,8 @@ javac.classpath=\
     ${file.reference.itext-xtra-5.5.9.jar}:\
     ${file.reference.itextpdf-5.5.9.jar}:\
     ${file.reference.xmlworker-5.5.9.jar}:\
-    ${libs.primefaces.classpath}
+    ${file.reference.font-awesome-4.6.2.jar}:\
+    ${file.reference.primefaces-5.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
