--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,12 +4,10 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
-    
     <context-param>
         <param-name>primefaces.FONT_AWESOME</param-name>
         <param-value>true</param-value>
     </context-param>
-
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -33,7 +31,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>registration.xhtml</welcome-file>
+        <welcome-file>menu.xhtml</welcome-file>
     </welcome-file-list>
     <security-constraint>
         <display-name>customerRule</display-name>
@@ -94,5 +92,4 @@
         <description/>
         <role-name>staff</role-name>
     </security-role>
-    
 </web-app>
