--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -31,7 +31,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>menu.xhtml</welcome-file>
+        <welcome-file>start.xhtml</welcome-file>
     </welcome-file-list>
     <security-constraint>
         <display-name>customerRule</display-name>
